[gd_scene load_steps=4 format=3 uid="uid://clp4pi1kvl5yp"]

[ext_resource type="Script" path="res://Scrap/Crafting/crafted_scrap_object.gd" id="1_wqmib"]
[ext_resource type="Texture2D" uid="uid://cmtovce3owmc2" path="res://Icons/CraftingIcons/wood-stick.png" id="2_medut"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fnfll"]
size = Vector2(64, 64)

[node name="CraftedScrapObject" type="Node2D"]
script = ExtResource("1_wqmib")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_medut")

[node name="LabelsPanel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -83.0
offset_right = 32.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="LabelsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.5
offset_top = -25.0
offset_right = 30.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="QualityLabel" type="Label" parent="LabelsPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quality"
horizontal_alignment = 1

[node name="PriceLabel" type="Label" parent="LabelsPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Price "
horizontal_alignment = 1

[node name="OnHoverArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OnHoverArea2D"]
shape = SubResource("RectangleShape2D_fnfll")
